--- a/crash-course/index.html
+++ b/crash-course/index.html
@@ -10,6 +10,31 @@
 </head>
 <body>
     <div id="bg"></div>
-    
+    <header>
+        <a href="#">ZoomZoom</a>
+    </header>
+    <main>
+        <section id="card">
+            <ul>
+                <li>
+                    <span></span>
+                    <span class="card-dialog">How can I help you?</span>
+                </li>
+                <li>
+                    <span></span>
+                    <span class="card-dialog">I don't know if I can be helped.</span>
+                </li>
+                <li>
+                    <span></span>
+                    <span class="card-dialog">Yes you can!</span>
+                </li>
+            </ul>
+        </section>
+        <section id="primary">
+            <h1>Your Personal Assistant</h1>
+            <p>Get help with your daily life stuff.</p>
+            <a href="#">Get help today now!</a>
+        </section>
+    </main>
 </body>
 </html>
