--- a/crash-course/index.html
+++ b/crash-course/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gettin' Sassy</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -17,15 +17,15 @@
         <section id="card">
             <ul>
                 <li>
-                    <span></span>
+                    <span class="card-avatar"></span>
                     <span class="card-dialog">How can I help you?</span>
                 </li>
                 <li>
-                    <span></span>
+                    <span class="card-avatar"></span>
                     <span class="card-dialog">I don't know if I can be helped.</span>
                 </li>
                 <li>
-                    <span></span>
+                    <span class="card-avatar"></span>
                     <span class="card-dialog">Yes you can!</span>
                 </li>
             </ul>
