--- a/flipbook/index.html
+++ b/flipbook/index.html
@@ -11,6 +11,14 @@
     <div class="container">
         <div class="paper"></div>
         <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
+        <div class="paper"></div>
     </div>
 </body>
 </html>
