--- a/bees/beesandbombs.html
+++ b/bees/beesandbombs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="beesandbomb.css">
 </head>
 <body>
-    
+    <div id="ring"></div>
+    <script src="dotgen.js"></script>
 </body>
 </html>
